* [2017-01-20] VTMF: improved NIZK generation (added group parameter hashing)
* [2016-12-31] release 1.2.0 of LibTMCG
* [2016-12-24] added GNUnet integration for DKG tools
* [2016-11-14] added a very limited OpenPGP (RFC4880) interface
* [2016-03-26] improved complexity of hash function g() used as random oracle
* [2016-03-24] mpz_shash using now hash function g() instead of h()
* [2016-03-20] protection against malicious verifiers through EDCF for SHVZK
* [2016-03-02] provides a distributed coin-flipping (EDCF) protocol
* [2016-02-27] provides a distributed signature scheme (NTS)
* [2016-02-24] provides a reliable broadcast (RBC) protocol
* [2016-02-15] provides a distributed key generation (DKG) protocol
* [2016-02-07] provides a non-interactive version of the rotation protocol
* [2016-02-07] provides a non-interactive version of the shuffle protocol
* [2016-02-06] new global symbol TMCG_MAX_FPOWM_N for restricting memory usage
* [2016-02-02] increase some security and bounding parameters
* [2016-01-31] implements an 1-out-of-n oblivious transfer protocol
* [2016-01-16] added configure option --with-gmp=<path>
* [2015-12-30] increase default security parameters to state of the art values
* [2015-12-25] release 1.1.3 of LibTMCG
* [2015-07] several files changed to reflect the new situation
* [2009-11-21] feature "--disable-forking" for ./configure added
* [2009-11-21] syntax error in libTMCG.texi fixed
* [2009-08-07] release 1.1.2 of LibTMCG
* small bugfixes for GCC 4.3.x
* [2007-05-05] release 1.1.1 of LibTMCG
* [2007-05-05] security fix (trivial group generator attack)
* [2007-04-16] release 1.1.0 of LibTMCG
* [2007-04-15] changed interface of TMCG_SecretKey to allow non-NIZK keys
* [2007-04-13] use faster shuffle algorithm in TMCG_CreateStackSecret(...)
* [2007-03-22] release 1.0.1 of LibTMCG
* [2007-03-21] function version_libTMCG() added
* [2007-03-20] security fix (avoid modulo bias in TMCG_CreateStackSecret(...))