@@ -1,4 +1,4 @@
-@set UPDATED 28 December 2016
-@set UPDATED-MONTH December 2016
-@set EDITION 1.2.0
-@set VERSION 1.2.0
+@set UPDATED 21 January 2017
+@set UPDATED-MONTH January 2017
+@set EDITION 1.3.0
+@set VERSION 1.3.0
