@@ -1,17 +1,22 @@
 /*******************************************************************************
    BarnettSmartVTMF_dlog_GroupQR.cc, VTMF instance where $G := \mathbb{QR}_p$
 
-     Adam Barnett, Nigel P. Smart: 'Mental Poker Revisited',
+     [BS03] Adam Barnett, Nigel P. Smart: 'Mental Poker Revisited',
      Cryptography and Coding 2003, LNCS 2898, pp. 370--383, 2003.
 
      [KK04] Takeshi Koshiba, Kaoru Kurosawa: 'Short Exponent Diffie-Hellman
-             Problems', In Public Key Cryptography - PKC 2004: Proceedings
-            7th International Workshop on Theory and Practice in Public Key
-             Cryptography, LNCS 2947, pp. 173--186, 2004
+       Problems', In Public Key Cryptography - PKC 2004: Proceedings 7th
+     International Workshop on Theory and Practice in Public Key Cryptography,
+     LNCS 2947, pp. 173--186, 2004.
+
+     [Bo98] Dan Boneh: 'The Decision Diffie-Hellman Problem',
+     Proceedings of the 3rd Algorithmic Number Theory Symposium,
+     LNCS 1423, pp. 48--63, 1998.
 
    This file is part of LibTMCG.
 
- Copyright (C) 2004, 2005, 2006, 2007, 2016  Heiko Stamer <HeikoStamer@gmx.net>
+ Copyright (C) 2004, 2005, 2006, 2007, 2016, 
+                                 2017  Heiko Stamer <HeikoStamer@gmx.net>
 
    LibTMCG is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
@@ -36,13 +41,14 @@
 
 BarnettSmartVTMF_dlog_GroupQR::BarnettSmartVTMF_dlog_GroupQR
 	(unsigned long int fieldsize, unsigned long int exponentsize):
-		BarnettSmartVTMF_dlog(fieldsize, 0L), E_size(exponentsize)
+		BarnettSmartVTMF_dlog(fieldsize, 0L, true),
+		E_size(exponentsize)
 {
 	// Create a finite abelian group $G$ where DDH is hard:
 	// We use the subgroup of quadratic residues modulo $p$,
 	// such that $p = 2q + 1$ and $p$, $q$ are both prime.
 	// The integer 2 is a generator of $\mathbb{QR}_p$ since
-	// $p \equiv 7 \pmod{8}$.
+	// $p \equiv 7 \pmod{8}$. [Bo98]
 	mpz_sprime2g(p, q, fieldsize - 1L, TMCG_MR_ITERATIONS);
 	mpz_set_ui(g, 2L), mpz_set_ui(k, 2L);
 	G_size = fieldsize - 1L;
@@ -52,8 +58,11 @@ BarnettSmartVTMF_dlog_GroupQR::BarnettSmartVTMF_dlog_GroupQR
 	// We use the (Short, Full)-ElGamal variant [KK04] here,
 	// i.e. the secret key should be still of full size $\ell_q$.
 	assert(mpz_sizeinbase(p, 2L) >= exponentsize);
-	mpz_ui_pow_ui(h, 2L, mpz_sizeinbase(p, 2L) - exponentsize);
-	mpz_powm(g, g, h, p);
+	mpz_t tmp;
+	mpz_init(tmp);
+	mpz_ui_pow_ui(tmp, 2L, mpz_sizeinbase(p, 2L) - exponentsize);
+	mpz_powm(g, g, tmp, p);
+	mpz_clear(tmp);
 	
 	// Precompute the $g$-table for the fast exponentiation.
 	mpz_fpowm_precompute(fpowm_table_g, g, p, mpz_sizeinbase(q, 2L));
@@ -62,7 +71,8 @@ BarnettSmartVTMF_dlog_GroupQR::BarnettSmartVTMF_dlog_GroupQR
 BarnettSmartVTMF_dlog_GroupQR::BarnettSmartVTMF_dlog_GroupQR
 	(std::istream& in,
 	unsigned long int fieldsize, unsigned long int exponentsize):
-		BarnettSmartVTMF_dlog(in, fieldsize, 0L), E_size(exponentsize)
+		BarnettSmartVTMF_dlog(in, fieldsize, 0L, true),
+		E_size(exponentsize)
 {
 	mpz_set_ui(g, 2L), mpz_set_ui(k, 2L);
 	G_size = fieldsize - 1L;
@@ -72,8 +82,11 @@ BarnettSmartVTMF_dlog_GroupQR::BarnettSmartVTMF_dlog_GroupQR
 	// We use the (Short, Full)-ElGamal variant [KK04] here,
 	// i.e. the secret key should be still of full size $\ell_q$.
 	assert(mpz_sizeinbase(p, 2L) >= exponentsize);
-	mpz_ui_pow_ui(h, 2L, mpz_sizeinbase(p, 2L) - exponentsize);
-	mpz_powm(g, g, h, p);
+	mpz_t tmp;
+	mpz_init(tmp);
+	mpz_ui_pow_ui(tmp, 2L, mpz_sizeinbase(p, 2L) - exponentsize);
+	mpz_powm(g, g, tmp, p);
+	mpz_clear(tmp);
 	
 	// Precompute the $g$-table for the fast exponentiation.
 	mpz_fpowm_precompute(fpowm_table_g, g, p, mpz_sizeinbase(q, 2L));
@@ -82,9 +95,9 @@ BarnettSmartVTMF_dlog_GroupQR::BarnettSmartVTMF_dlog_GroupQR
 bool BarnettSmartVTMF_dlog_GroupQR::CheckGroup
 	() const
 {
-	mpz_t foo;
+	mpz_t foo, g2;
 	
-	mpz_init(foo);
+	mpz_init(foo), mpz_init(g2);
 	try
 	{
 		// Check whether $p$ and $q$ have appropriate sizes.
@@ -98,8 +111,8 @@ bool BarnettSmartVTMF_dlog_GroupQR::CheckGroup
 		if (mpz_cmp(foo, p))
 			throw false;
 		
-		// Check whether $p$ and $q$ are both (probable) prime with
-		// a soundness error probability ${} \le 4^{-TMCG_MR_ITERATIONS}$.
+		// Check whether $p$ and $q$ are both (probable) prime with a
+		// soundness error probability ${} \le 4^{-TMCG_MR_ITERATIONS}$.
 		if (!mpz_probab_prime_p(p, TMCG_MR_ITERATIONS) || 
 			!mpz_probab_prime_p(q, TMCG_MR_ITERATIONS))
 				throw false;
@@ -108,21 +121,35 @@ bool BarnettSmartVTMF_dlog_GroupQR::CheckGroup
 		if (!mpz_congruent_ui_p(p, 7L, 8L))
 			throw false;
 		
-		// Check whether $g$ is a generator for the subgroup $G$ of order $q$.
-		// It is sufficient to assert that $g$ is a quadratic residue mod $p$,
-		// i.e. we can simply do this by computing the Legendre-Jacobi symbol.
-		// Of course, we must ensure that $g$ is not trivial, i.e., $1 < g < p-1$.
+		// Check whether $g$ is a generator for the subgroup $G$ of 
+		// order $q$. It is sufficient to assert that $g$ is a quadratic
+		// residue mod $p$, i.e. we can simply do this by computing the
+		// Legendre-Jacobi symbol.
+		// Of course, we must also ensure that $g$ is not trivial, i.e.,
+		// $1 < g < p-1$.
 		mpz_sub_ui(foo, p, 1L);
 		if ((mpz_cmp_ui(g, 1L) <= 0) || (mpz_cmp(g, foo) >= 0) || 
 			(mpz_jacobi(g, p) != 1L))
 				throw false;
+
+		// If we use a specific value for $g$, further checks are needed.
+		if (specific_g)
+		{
+			if (mpz_sizeinbase(p, 2L) < E_size)
+				throw false;
+			mpz_set_ui(g2, 2L);
+			mpz_ui_pow_ui(foo, 2L, mpz_sizeinbase(p, 2L) - E_size);
+			mpz_powm(g2, g2, foo, p);
+			if (mpz_cmp(g2, g))
+				throw false;
+		}
 		
 		// finish
 		throw true;
 	}
 	catch (bool return_value)
 	{
-		mpz_clear(foo);
+		mpz_clear(foo), mpz_clear(g2);
 		return return_value;
 	}
 }
@@ -163,8 +190,8 @@ void BarnettSmartVTMF_dlog_GroupQR::MaskingValue
 	}
 	else
 	{
-		// Under the additional DLSE assumption we can reduce the size of
-		// the exponent. Note that the generator must be shifted [KK04].
+		// Under additional DLSE assumption we can reduce the size of
+		// the exponent. Note that generator $g$ must be shifted [KK04].
 		do
 			mpz_srandomb(r, E_size);
 		while (!mpz_cmp_ui(r, 0L) || !mpz_cmp_ui(r, 1L));
