@@ -1,3 +1,4 @@
+* [2017-01-21] VTMF: added generation and check of specific group generator
 * [2017-01-20] VTMF: improved NIZK generation (added group parameter hashing)
 * [2016-12-31] release 1.2.0 of LibTMCG
 * [2016-12-24] added GNUnet integration for DKG tools
